# oracle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
data/: canada_female_life_table.pkl  canada_male_life_table.pkl
docker/postgres/: 00_client.sql  01_api_key.sql
notebooks/: life_table.ipynb
src/oracle/: __init__.py  config.py  dependencies.py  main.py  model.py  predictor.py
src/oracle/core/: config.py
src/oracle/models/: __init__.py  api_key.py  client.py  prediction.py
src/oracle/routers/: api_key.py  client.py  core.py  prediction.py  predictions.py
src/oracle/schemas/: prediction.py  predictions.py
src/oracle/services/: predictor.py
src/oracle/services/predictor/: __init__.py  life_expectancy.py  life_table.py  predictor.py  smoking.py
src/oracle/utils/: database.py
