[project]
name = "oracle"
version = "0.1.0"
description = ""
authors = [
    {name = "Payam Yektamaram",email = "payamyek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "oracle", from = "src"}]

[tool.ruff]
line-length = 120

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
