[project]
name = "oracle"
version = "0.1.0"
description = ""
authors = [
    {name = "Payam Yektamaram",email = "payamyek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog (>=25.1.0,<26.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pandas[excel] (>=2.2.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi[standard] (>=0.115.10,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "oracle", from = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff]
line-length = 120

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pre-commit = "^4.1.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
